--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta name="description" content="We - Hecu collective. The team was founded on December 10, 2016. April 2018, the Azure Sheep team joined the main development team, thereby forming the HECU Collective.">
-	<title>Hecu collective | Oficial Website</title>
+	<title>Hecu collective | Official Website</title>
 </head>
 <body>
 	<div class="container">
