changed paragraph text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<h1>Welcome to official page Hecu collective!</h1>
-		<p>This site is currently in development, but you can look at our projects:</p>
+		<p>You can look at our projects:</p>
         <div class="text-img-link-block">
 			<div class="text-img-link-block__item">
 				<h2>Black Mesa: Blue Shift</h2>
