--- a/ru/index.html
+++ b/ru/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<h1>Добро пожаловать на официальный сайт Hecu collective!</h1>
-		<p>Сайт на данный момент в разработке, но вы можете посмотреть на наши проекты:</p>
+		<p>Вы можете посмотреть на наши проекты:</p>
         <div class="text-img-link-block">
 			<div class="text-img-link-block__item">
 				<h2>Black Mesa: Blue Shift</h2>
